// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu 1`] = `
Object {
  "d": Object {
    "type": "MENU",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Menu3",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".$3",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  Object {
                    "i": "menuDispatch",
                  },
                  "Menu3",
                  Object {
                    "d": Object {
                      "type": "Menu3",
                    },
                  },
                ],
                "func": Object {
                  "i": "_signal",
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "key": "react.fragment",
      },
    },
  },
}
`;

exports[`menu 2`] = `
Object {
  "d": Object {
    "type": "MENU",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Menu1",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".$1",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  Object {
                    "r": 1,
                  },
                  "Menu1",
                  Object {
                    "d": Object {
                      "type": "Menu1",
                    },
                  },
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
        Object {
          "$": "ReactElement",
          "children": Array [
            "Menu3",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".$3",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  Object {
                    "r": 1,
                  },
                  "Menu3",
                  Object {
                    "d": Object {
                      "type": "Menu3",
                    },
                  },
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "key": "react.fragment",
      },
    },
  },
  "x": Object {
    "0": Object {
      "i": "_signal",
    },
    "1": Object {
      "i": "menuDispatch",
    },
  },
}
`;

exports[`menu 3`] = `
Object {
  "d": Object {
    "type": "MENU",
    "value": Object {
      "$": "ReactElement",
      "children": Array [
        Object {
          "$": "ReactElement",
          "children": Array [
            "Menu1",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".$1",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  Object {
                    "r": 1,
                  },
                  "Menu1",
                  Object {
                    "d": Object {
                      "type": "Menu1",
                    },
                  },
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
        Object {
          "$": "ReactElement",
          "children": Array [
            "Menu2",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".$2",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  Object {
                    "r": 1,
                  },
                  "Menu2",
                  Object {
                    "d": Object {
                      "type": "Menu2",
                    },
                  },
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
        Object {
          "$": "ReactElement",
          "children": Array [
            "Menu3",
          ],
          "props": Object {
            "d": Object {
              "children": undefined,
              "key": ".$3",
              "onClick": Object {
                "$": "Bind",
                "args": Array [
                  Object {
                    "r": 1,
                  },
                  "Menu3",
                  Object {
                    "d": Object {
                      "type": "Menu3",
                    },
                  },
                ],
                "func": Object {
                  "r": 0,
                },
                "self": null,
              },
            },
          },
          "type": "button",
        },
      ],
      "props": Object {
        "d": Object {
          "children": undefined,
        },
      },
      "type": Object {
        "$": "Symbol",
        "key": "react.fragment",
      },
    },
  },
  "x": Object {
    "0": Object {
      "i": "_signal",
    },
    "1": Object {
      "i": "menuDispatch",
    },
  },
}
`;

exports[`menu 4`] = `
Object {
  "d": Object {
    "type": "FLUSH",
  },
}
`;
